# whollymath

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENT_TEAM.md  ARCHITECTURE.md  AUTH.md  CLAUDE.md  CLEANUP_AUDIT.md  CLEANUP_NOTES.md  DECISION_LOG.md  DEMO.md  LIMITATIONS.md  PRD_CHECKLIST.md  PRODUCT.md  README.md  ROADMAP.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: __init__.py
backend/app/api/: README.md  __init__.py  app.py  auth_routes.py  benchmark_transcript_view.py  child_account_routes.py  child_account_schemas.py  child_account_service.py  course_routes.py  dependencies.py  eval_view.py  homework_view.py  live_adaptation.py  parent_auth_routes.py  parent_auth_schemas.py  parent_auth_service.py  parent_session.py  rate_limit.py  remediation_view.py  routes.py  schemas.py  service.py  teacher_routes.py  teacher_service.py  units_routes.py
backend/app/auth/: README.md  __init__.py  csrf.py  google.py  passwords.py  pin_lockout.py  tokens.py
backend/app/db/: README.md  __init__.py  base.py  engine.py  models.py  repositories.py  seed.py
backend/app/domain/: README.md  __init__.py  center_spread.py  curriculum.py  decimal_place_value_stimulus.py  diagnostic_gems.json  exponent_product_stimulus.py  fraction_area_stimulus.py  gcf_factors_stimulus.py  hint_validation.py  integer_line_stimulus.py  knowledge_components.py  lesson_spec.py  misconceptions.py  percent_grid_stimulus.py  prerequisites.py  problem_generators.py  ratio_table_stimulus.py  scene.py  set_model_stimulus.py  stats_stimulus.py  verifier.py
backend/app/eval/: MODEL_EVAL_REPORT.md  README.md  __init__.py  benchmark_transcript.py  chat_baseline.py  false_positive_harness.py  helpneed_calibration.py  live_loop_metrics.py  proactive_ab.py  static_worked_example.py  three_arm_comparison.py
backend/app/events/: README.md  __init__.py  ingest.py
backend/app/helpneed/: README.md  __init__.py  artifact.py  events_features.py  features.py  labels.py  live_features.py  live_signal_features.py  parse_assistments.py  parse_edmcup.py  per_kc_validation.py  predictor.py  synthetic_traces.py  train_pipeline.py  train_synthetic.py
backend/app/homework/: README.md  __init__.py  assignment.py  grading.py  scanner.py  session.py
backend/app/llm/: README.md  __init__.py  provider.py  tracing.py
backend/app/mastery/: README.md  __init__.py  course_map.py  mastery_model.py  progression.py  retention.py  unit_progress.py
backend/app/notifications/: README.md  __init__.py  email_sender.py
backend/app/persona_surface/: README.md  __init__.py  hint_renderer.py  learner_voice.py  misconception_voice.py  tutor_voice.py
backend/app/personas/: README.md  __init__.py  cleo.py  cora.py  hugo.py  nate.py  persona_config.py  priya.py  registry.py  run.py  sam.py  simulator.py  student_bots.py
backend/app/policy/: README.md  __init__.py  emotion.py  intervention_gate.py  mid_problem_help.py  refuse_rules.py  remediation_flow.py  remediation_router.py  scheduler.py  signal_routing.py  state_classifier.py  surface_states.py  transitions.py
backend/app/teacher/: README.md  __init__.py  alerts.py  assign.py  evidence.py  overview.py  ranking.py  struggle.py  trends.py
backend/app/tts/: README.md  __init__.py  batch.py  live_synth.py  manifest_lookup.py  number_splicing.py  provider.py  render_bank.py  rhubarb_visemes.stub.py  spoken_bank.py
backend/app/tutor/: README.md  __init__.py  hints.py  hints_es.py  live_transfer_probe.py  session.py  transcribed_answer.py  transfer_probe.py  worked_example.py
backend/migrations/: env.py
backend/migrations/versions/: 1d435502e4db_learner_google_sub.py  a32e6e852503_interaction_event.py  a3c8e1f5d720_auth_session.py  b2d4f6a8c1e3_child_username_global_unique.py  b4f7c9a2e1d8_unit_cluster_nullable_and_seed.py  c1a7b2f4d9e0_curriculum_teacher_schema.py  c4f1a9d27b30_widen_turn_surface_state.py  d5e8a1c63f72_teacher_reminder.py  e7c2a9f4b108_learner_locale.py  f1a9c7d3e2b4_parent_child_auth_schema.py  f3426185eb03_initial_schema_learner_session_turn_.py
backend/scripts/: seed_demo_class.py
backend/tests/: __init__.py  test_smoke.py
backend/tests/api/: __init__.py  _artifact_skip.py  asgi_client.py  conftest.py  test_auth_dependency.py  test_benchmark_transcript.py  test_child_accounts.py  test_course.py  test_durable_first_star.py  test_e2e_live_lessons.py  test_eval_comparison.py  test_events_ingest.py  test_help_need_wiring.py  test_help_voicing.py  test_hint_escalation.py  test_homework_flow.py  test_lesson_completion.py  test_live_adaptation.py  test_live_adaptation_wiring.py  test_locale.py  test_mid_problem_nudge.py  test_number_line_lesson.py  test_parent_auth.py  test_persistence_wiring.py  test_proactive_intervention.py  test_rate_limit.py  test_remediation_redteam.py  test_remediation_router_live.py  test_remediation_view.py  test_service_boundary.py  test_spoken_audio.py  test_study_plan.py  test_teacher_auth.py  test_teacher_routes.py  test_transcribe_answer.py  test_transfer_probe_live.py  test_turn_contract.py  test_units.py  test_worked_example_wiring.py
backend/tests/auth/: __init__.py  test_csrf.py  test_google_verify.py  test_invariant8_imports.py  test_passwords.py  test_pin_lockout.py  test_tokens.py
backend/tests/db/: __init__.py  test_auth_session_repository.py  test_curriculum_teacher_models.py  test_event_repository.py  test_events_features_repository.py  test_google_sub_repository.py  test_migration_round_trip.py  test_models.py  test_parent_child_repository.py  test_repositories.py  test_seed.py
backend/tests/domain/: __init__.py  test_absolute_value.py  test_area_polygons.py  test_better_buy.py  test_categorical_data.py  test_center_spread_shape.py  test_check_register.py  test_classify_number_sets.py  test_coordinate_plane.py  test_curriculum.py  test_data_displays.py  test_decimal_operations.py  test_decimal_place_value_stimulus.py  test_dependent_vars.py  test_gcf_lcm.py  (+43 more)
(+339 files in other folders)
