[project]
name = "whollymath-backend"
version = "0.1.0"
description = "WhollyMath backend: adaptive fraction tutor (FastAPI + SymPy + ML). See ARCHITECTURE.md."
requires-python = ">=3.11"

# Runtime dependencies. Versions are pinned (CLAUDE.md §8.7); each carries a one-line justification.
dependencies = [
    "fastapi==0.136.3",        # API framework for the turn loop; async + Pydantic + OpenAPI (TECH_STACK §3).
    "uvicorn[standard]==0.48.0", # ASGI server running FastAPI in local dev and Fargate (CLAUDE.md §10).
    "sympy==1.14.0",           # The ONLY thing that decides math correctness; lives in domain/ (TECH_STACK §3, ARCHITECTURE §9).
    "sqlalchemy==2.0.50",      # ORM for Postgres (sessions, mastery, persona runs) (TECH_STACK §4).
    "alembic==1.18.4",         # DB migrations: the prod schema-change authority over models.py, retiring create_all-only (Slice PL.1, closes TODO 1.8.3). MIT; the standard SQLAlchemy migration tool, no new transitive surface beyond Mako.
    "pydantic==2.13.4",        # Typed request/response models; source of truth for generated TS types (TECH_STACK §2).
    "python-dotenv==1.2.2",    # Loads local .env (DATABASE_URL, API keys) in dev; Secrets Manager in prod (CLAUDE.md §10).
    "xgboost==3.2.0",        # HelpNeed predictor: interpretable gradient-boosted trees, sub-100ms CPU inference, no GPU (TECH_STACK §5). Apache-2.0.
    "scikit-learn==1.8.0",   # HelpNeed train/test split, metrics, logistic-regression baseline, joblib serialization (TECH_STACK §5). BSD-3.
    "anthropic>=0.104.1",
    "langsmith>=0.1.0",       # Optional LLM-call tracing for the Layer-4 surface, confined to llm/ and env-gated by LANGSMITH_TRACING (Slice PL.0); no-op passthrough when off. MIT.
    "google-auth==2.43.0",    # Google's OFFICIAL ID-token verifier (oauth2.id_token.verify_oauth2_token): fetches Google's JWKS and checks the RS256 signature, issuer, audience, and expiry for us. Confined to app/auth/ (Slice PL.3). Apache-2.0. Justified per CLAUDE.md §8.7 + PROJECT.md §3.12 "don't build your own auth": delegating token verification to Google's maintained library is materially safer than hand-rolling JWT/JWKS/crypto.
    "psycopg2-binary==2.9.10", # PostgreSQL driver for SQLAlchemy's default postgresql:// dialect. REQUIRED for the prod RDS deploy (TECH_STACK §4, CLAUDE.md §10): no driver was ever in the deps, so the app silently used its SQLite fallback and could not connect to Postgres. The -binary wheel bundles libpq so the slim Fargate image needs no build toolchain (CLAUDE.md §8.7). LGPL-3.0; used as a dynamically-linked driver (not modified/redistributed).
    "argon2-cffi==23.1.0",     # Argon2id password + child-PIN hashing for parent/child accounts (Slice auth/parent-child, owner decision 2026-06-03). OWASP Password Storage Cheat Sheet ranks Argon2id first; we do NOT hand-roll crypto (CLAUDE.md §8.7, PROJECT.md §3.12 "don't build your own auth"). Confined to app/auth/. MIT; bundles the Argon2 reference implementation via CFFI, no system libargon2 needed for the Fargate image.
    "pyjwt==2.10.1",           # Mint + verify OUR OWN short-lived session JWTs for parent/child auth (Slice auth/parent-child). google-auth only VERIFIES Google's tokens; it cannot issue ours. PyJWT is the de-facto standard, audited JWT library — used with HS256 + a Secrets-Manager signing key, paired with a server-side revocable session record (never a bare stateless JWT). Confined to app/auth/. MIT.
    "boto3>=1.34",             # AWS SDK — used ONLY to send the COPPA parental-email verification via SES SendEmail (owner decision 2026-06-03: real email verification is the consent anchor). Confined to app/notifications/; the Fargate task authenticates via its IAM role (no static creds). Falls back to a logging no-op sender when SES is unconfigured (local dev). Apache-2.0. Lock pins the exact version.
]

[dependency-groups]
# Dev-only tooling. Pinned with justification per CLAUDE.md §8.7.
dev = [
    "pytest==9.0.3",  # Test runner; TDD is mandatory for domain/mastery/persona/helpneed (CLAUDE.md §2).
    "ruff==0.15.14",  # Linter + formatter (replaces black) (CLAUDE.md §6).
    "mypy==2.1.0",    # Static type checker run with --strict (CLAUDE.md §6).
    "pydantic-to-typescript==2.0.0",  # Generates shared-types/ TS from the Pydantic schemas — one source of truth for the API contract (TECH_STACK §2). MIT.
    "shap==0.51.0",  # SHAP feature-attribution for the HelpNeed writeup ("why did it fire on turn 7?") (TECH_STACK §5). MIT. Analysis-only, not in the inference path.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ─── Ruff: lint + format (CLAUDE.md §6) ───
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]
# Alembic's generated env.py / versions/*.py are templated code we do not hand-author to our
# style (Slice PL.1); excluding them is the standard practice rather than fighting generated
# output (the migration logic is verified by `alembic upgrade head`, not by lint). env.py we
# DID author cleanly, but the generated migration scripts are left as-is.
extend-exclude = ["migrations"]

[tool.ruff.lint]
# A reasonable strict-by-default set: pyflakes, pycodestyle, isort (sorted imports), bugbear,
# pyupgrade, naming. snake_case / PascalCase enforced via pep8-naming (CLAUDE.md §6).
select = ["E", "F", "I", "B", "UP", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# The TTS Rhubarb stub is deliberately named `*.stub.py` (Slice A) so its inert, not-yet-built
# status is obvious from the filename. The `.stub` segment trips N999 (invalid module name);
# that is intentional — the file is loaded by path in tests, never imported as a dotted module.
"app/tts/rhubarb_visemes.stub.py" = ["N999"]

[tool.ruff.format]
# ruff format replaces black (CLAUDE.md §6).
quote-style = "double"

# ─── Mypy: strict (CLAUDE.md §6) ───
[tool.mypy]
python_version = "3.11"
strict = true
files = ["app", "tests"]
# Alembic's generated migration scripts (and the templated parts of env.py) are not authored
# to --strict; excluding the migrations dir is standard rather than fighting generated code
# (Slice PL.1). The migration is verified by applying it (`alembic upgrade head`), not by mypy.
exclude = ["migrations/"]
# SymPy ships no type stubs; ignore missing imports for it specifically rather than globally.
[[tool.mypy.overrides]]
module = ["sympy.*"]
ignore_missing_imports = true

# The ML libs (HelpNeed predictor, TECH_STACK §5) ship no/partial type stubs; ignore
# missing imports for them specifically rather than globally (same policy as sympy).
[[tool.mypy.overrides]]
module = ["xgboost.*", "sklearn.*", "shap.*", "joblib.*"]
ignore_missing_imports = true

# boto3 (AWS SDK, used only for SES in app/notifications/, Slice auth/parent-child) ships no
# type stubs; ignore missing imports for it specifically rather than globally (same policy as
# sympy/the ML libs). The send path is best-effort and behind a Protocol, covered by tests.
[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true

# google-auth (Slice PL.3) is installed but its public verifier surface is untyped
# (google.oauth2.id_token.verify_oauth2_token / google.auth.transport.requests.Request lack
# annotations), so under --strict a typed caller trips `no-untyped-call`. We scope the relief
# to google.* alone — ``follow_imports = skip`` makes the package resolve to ``Any`` so calling
# its untyped functions is allowed — rather than scattering per-line `# type: ignore` across
# app/auth/google.py (same narrow, module-scoped policy as sympy/the ML libs; that module's
# behavior is covered by tests/auth/). ``ignore_missing_imports`` is kept for robustness if the
# package is ever absent at type-check time.
[[tool.mypy.overrides]]
module = ["google.*"]
ignore_missing_imports = true
follow_imports = "skip"

# ─── Pytest: tests/ mirrors app/ (CLAUDE.md §6) ───
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q"
